@@ -354,7 +354,7 @@ static void ctl_pass_playing_list(int n, char *args[])
 
 	opt_realtime_playing = 1; /* Enable loading patch while playing */
 	allocate_cache_size = 0; /* Don't use pre-calclated samples */
-	current_keysig = opt_init_keysig;
+	current_keysig = (opt_init_keysig == 8) ? 0 : opt_init_keysig;
 	note_key_offset = 0;
 
 	if (IS_STREAM_TRACE) {
